--- a/index.html
+++ b/index.html
@@ -1,40 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
-
-body{
-    background-color:white;
-}
-header {
-    padding: 32px;
-    border: 5px solid black;
-    background-color: blueviolet;    
-}
-
-header div {
-    text-align: center;
-}
-
-header div a {
-    color: white;
-    font-size: 30px;
-    line-height: 30px;
-    margin: 0 16px;
-    text-decoration: none;
-    font-family: "Shadows Into Light", cursive;
-}
-
-header div a:hover {
-color: black;
-transition: color 700ms;
-
-}
-
-    </style>
-
+    <link rel="stylesheet" href="style.css">
 <head>    
-    <title>The Bois</title>
+    <title>Artur</title>
 </head>
 <body>
 
@@ -42,19 +10,20 @@ transition: color 700ms;
             <div class="links">
                 <a href="https://github.com/artur1612" target="_blank" >GitHub</a>
                 <a href="https://instagram.com/artur.ms_" target="_blank" >Instagram</a>
-                <a href="https://tiktok.com/euartzin" target="_blank" >TikTok</a>
+                <a href="https://tiktok.com/@euartzin" target="_blank" >TikTok</a>
+
+                </div>
+        </header>  
+
                 <div id="box">
 
-                    <img src="https://avatars.githubusercontent.com/u/160517135?v=4" alt="">
+                    <img src="https://avatars.githubusercontent.com/u/160517135?v=4" alt="Imagem de perfil">
                          <h1>Artur Morais</h1>
                          <h2>Aluno - Colégio CEV</h2>
                          <p>Focado em aprender progamação</p>
                     </div>
-                </div>
-            
 
             </div>            
-        </header>
     
 </body>
 </html>
